Fix horizontal scroll

--- a/website/src/app.css
+++ b/website/src/app.css
@@ -75,6 +75,8 @@
     --sidebar-ring: oklch(0.637 0.237 25.331);
 }
 
+
+
 @theme inline {
     --radius-sm: calc(var(--radius) - 4px);
     --radius-md: calc(var(--radius) - 2px);
@@ -120,15 +122,11 @@
         letter-spacing: -0.05em;
     }
 
-    body {
-        @apply bg-background text-foreground;
-        background-color: hsl(180, 9%, 4%);
-        scroll-behavior: smooth;
-        mask: inset(0 0 0 0);
-    }
-    html{
-        scroll-behavior: smooth;
-    }
+        body {
+            color: var(--color-gray-400);
+            background-color: hsl(180, 9%, 4%);   
+        }
+
 
     .text-5xl {
         letter-spacing: -2.2px;
